MOVE-4958 Flyttte kode for dokumentpakking og cucumber til efm-common